--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <form id="form">
-    <input type="text" name="description" />
+    <input type="text" name="description" id="description" />
     <input type="submit" value="Create"/>
 </form>
 
@@ -44,7 +44,7 @@
     })
      .catch(function(){
          document.getElementById('error').className = '';
-     })
+     });
     }
 </script>
 
